# PIHProposalTool

./: .env  .env.example  .gitignore  .replit  Caddyfile  Dockerfile  README.md  add_marketing_images.py  add_proposal_details_page.py  analyze_template.py  app.py  append_marketing_pdf.py  append_marketing_to_pdf.py  docker-compose.yml  enhanced_customer_info.py  extract_customer_func.txt  fix_app.py  fix_duplicate_headers.py  fix_final_page_formatting.py  fix_headers_and_columns.py  fix_image_sizes.py  fix_image_sizing.py  fix_image_wrapping.py  fix_included_items.py  fix_none_values.py  fix_notes_and_spacing.py  fix_optional_items.py  fix_optional_items_table.py  fix_options_header.py  fix_options_headers.py  fix_page7_image.py  fix_page_14_spacing.py  fix_preview_alert.py  fix_price_calculations.py  fix_proposal_details_formatting.py  fix_recommended_note.py  fix_recommended_note_and_centering.py  fix_remaining_formatting.py  fix_remaining_issues.py  fix_save_buttons.py  (+22 more)
attached_assets/: CostSheetTemplate.xlsx  Pasted--Environment-updated-Reloading-shell-2025-04-20-22-14-32-0000-763-INFO-Starting-gunicorn-1745187309673.txt  Pasted--Suggested-Table-of-Contents-Cover-Page-Executive-Summary-Project-Overview-Why-VLMs-Vertical-L-1743740324871.txt  Pasted--Why-VLMs-Significant-Space-Savings-VLMs-free-up-more-space-for-further-storage-or-revenue-g-1745198464983.txt  Pasted-Awesome-let-s-make-this-hour-count-Here-s-a-focused-plan-to-maximize-your-progress-in-just-one--1739487819021.txt  ThermoFisher_CostSheet_Modula_ML25_Cleanroom_QLI-00051890.xlsx  (+7 more)
instance/: pih_data.db
(+19 files in other folders)
