[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx2python>=3.5.0",
    "docx>=0.2.4",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "mammoth>=1.9.0",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.5",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "pypdf>=5.4.0",
    "python-docx>=1.1.2",
    "sqlalchemy>=2.0.39",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "matplotlib>=3.10.1",
    "pandas>=2.3.0",
    "numpy>=2.2.4",
    "pymupdf (>=1.26.4,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
]
